# QML-TicTacToe

./: .gitignore  AppStatusBar.qml  Bar.qml  CMakeLists.txt  CurrentPlayerIndicator.qml  GameBoard.qml  GameCell.qml  NewGameDialog.qml  README.md  ViewHelper.js  boarditerator.cpp  boarditerator.h  gameboard.cpp  gameboard.h  gamecontroller.cpp  gamestatealgorithm.cpp  gamestatealgorithm.h  main.cpp  main.qml  perfectai.cpp  perfectai.h  qml.qrc
Test/: BoardIteratorTest.cpp
include/: basegameopponent.h  boarditerator.h  cellstateenum.h  gameboard.h  gamecontroller.h  gamemodel.h  gameopponentenum.h  gamestatealgorithm.h  gamestateenum.h  igameai.h  keyboardnavigator.h  perfectgameai.h
include/enums/: gamestateenum.h
include/opponent/: basegameopponent.h  cpuopponent.h  igameai.h  perfectgameai.h
include/opponents/: igameopponent.h  perfectai.h
src/: basegameopponent.cpp  boarditerator.cpp  cellstateenum.cpp  gameboard.cpp  gamecontroller.cpp  gamemodel.cpp  gameopponentenum.cpp  gamestatealgorithm.cpp  gamestateenum.cpp  igameai.cpp  keyboardnavigator.cpp  perfectgameai.cpp
src/enums/: cellstateenum.cpp  gameopponentenum.cpp  gamestateenum.cpp
src/opponent/: basegameopponent.cpp  cpuopponent.cpp  igameai.cpp  perfectgameai.cpp
src/opponents/: igameopponent.cpp  perfectai.cpp
